--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<mysql.version>5.1.1</mysql.version>
 		<logger.version>1.2.17</logger.version>
 		<jta.version>1.1</jta.version>
+		<jstl.version>1.2</jstl.version>
 
 	</properties>
 
@@ -34,6 +35,13 @@
 			<groupId>javax.transaction</groupId>
 			<artifactId>jta</artifactId>
 			<version>${jta.version}</version>
+		</dependency>
+
+		<!-- for jsp page ,jsp if,jsp for each,(JSTL) -->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
 		</dependency>
 
 		<dependency>
