--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<logger.version>1.2.17</logger.version>
 		<jta.version>1.1</jta.version>
 		<jstl.version>1.2</jstl.version>
-
+		<mail.version>1.6.0</mail.version>
 	</properties>
 
 	<dependencies>
@@ -60,6 +60,24 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${logger.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>${mail.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>${mail.version}</version>
+		</dependency>
+		<!-- this for mail sending -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.version}</version>
 		</dependency>
 
 
